Guess what! More writing!

--- a/Acknowledgement/acknowledgement.tex
+++ b/Acknowledgement/acknowledgement.tex
@@ -11,9 +11,9 @@
 
 No good thesis\footnote{Though the quality of this one is debatable.} wouldn't be complete without a commitment to the authors friends.
 I first met some of you on literal day one of my undergraduate degree in Leeds, it's really quite incredible how you've all tolerated my nonsense for so long.
-From essentially forcing my way into Rob's house so I could cook some disastrous fried chicken, to playing \text{Super Smash Bros.} all night long on it's release day, to watching trashy movies over the internet at the height of the pandemic, these are moments I'll treasure for the rest of my life.
-Thank you all, for making me so happy these last 9 years.
+From essentially forcing my way into Rob's house so I could cook some disastrous fried chicken, to playing \text{Super Smash Bros.} all night long on it's release day, to watching trashy movies over the internet at the height of a global pandemic, these are moments I'll treasure for the rest of my life.
 In particular, those who are still in Leeds, Rob, Matt, Kelsie and Alex; as well as those who aren't, Martin, Caz, Andy, and Devon. 
+Thank you all, for making me so happy these last 9 years.
 
 To my partner Pruthvi, I cannot stress how unlikely it is that the two of us even met; two people finding each other on esoteric circles of the internet is like two particles colliding in the tenuous interstellar medium, if you'll excuse the extremely trashy metaphor.
 You've been supportive, helpful, and the most wonderful partner anyone could ask for; I truly am blessed to know you and love you.
@@ -21,6 +21,19 @@ You've been supportive, helpful, and the most wonderful partner anyone could ask
 I would also like to thank the wonderful team at Leeds' ARC High Performance Computing department, considering the bulk of this work involves many 3D numerical simulations my use of ARC 4's compute nodes can be described as somewhere from ``excessive'' to ``taking the piss''.
 I also apologise for running my earlier simulations on the login nodes for multiple days, I swear it was an accident.
 
+I would also like to thank two figures from my formative years for inspiring me:
+
+The first is my 5\textsuperscript{th} year Physics teacher, Isobel Why, who re-kindled my interest in the field, she was the finest teacher I ever had, turning me from an underachieving student to a keen and committed aspiring physicist.
+She truly had faith in all of her students, and pushed them far beyond what they thought themselves capable of.
+Whilst she left teaching shortly after that year, I will never forget her impact on my life and my work.
+
+Another is quite indirect, but still important, I would be amiss to thank Winchell ``Nyrath'' Chung, curator of the website \href{http://www.projectrho.com/public_html/rocket/}{Atomic Rockets}.
+Winchell's work is perhaps one of the most complete and exhaustive archive of real life and fictional rocketry and space exploration - whilst I haven't called on his work much during my career in astrophysics, I pored over this website when I was younger, perhaps reading it more thoroughly than any of my course textbooks, it was fascinating, insightful and inspiring not only to me, but thousands of readers.
+The number of projects, from hard SFF novellas to honest-to-goodness space exploration research proposals hinge on his tireless efforts to catalogue our exploration of space.
+I learned of his terminal diagnosis whilst writing this thesis, and it cut me to my core, without his work I don't think I would have turned a fascination with space into my life's work.
+Thank you so much, both of you.
+
+% This one might need to be moved, considering the above paragraph 
 Finally, I would like to thank Leandro Panizzon and his wife, Margarita, though Methylphenidate was originally synthesised by him to treat her low blood pressure, it also works quite well for dragging my attention-deficit riddled brain through this PhD.
 
 \end{acknowledgements}
