--- a/Common_Symbols/Common_Symbols.tex
+++ b/Common_Symbols/Common_Symbols.tex
@@ -37,6 +37,9 @@ List of common symbols, if symbol requires a derivation, the appropriate equatio
   $\tau_\text{cool}$ & Cooling timescale & Equation \ref{eq:taucool} \\
   $\tau_\text{esc}$ & Escape timescale & Equation \ref{eq:tauesc} \\
 
+  $\mu$ & Mean molecular mass & \\
+
+  $\kappa$ & Sub-timestep fraction & \ref{eq:kappafirstuse} \\
 
   $\chi$ & Cooling parameter  & Equation \ref{eq:coolingparameter} \\
 
