--- a/References/library.bib
+++ b/References/library.bib
@@ -1,17 +1,18 @@
 
-@article{1970ApJ...159..879L,
-  title = {Mass {{Loss}} by {{Hot Stars}}},
-  author = {Lucy, L. B. and Solomon, P. M.},
-  year = {1970},
-  month = mar,
+@article{1982ApJ...259..282A,
+  title = {The Theory of Radiatively Driven Stellar Winds. {{II}}. {{The}} Line Acceleration.},
+  author = {Abbott, D. C.},
+  year = {1982},
+  month = aug,
   journal = {The Astrophysical Journal},
-  volume = {159},
-  pages = {879},
+  volume = {259},
+  pages = {282--301},
   issn = {0004-637X},
-  doi = {10.1086/150365},
-  abstract = {A mechanism is proposed to explain the mass loss observed for luminous, hot stars. We show that the ultraviolet resonance lines of ions such as Si iv, C iv, N v, and S vi can give strongly negative effective gravities in the outer parts of the reversing layers of hot stars. We argue that a static reversing layer is then no longer possible and that a continuous outflow of mass occurs. To calculate rates of mass loss resulting from this mechanism, we formulate the problem of steady-state, moving reversing layers. From numerical solutions of the equations of this problem, the rate of mass loss is found to be {$<$} L/c2 the evolution of the star is therefore not disturbed significantly. The domain in the (log , log g)-plane where the greatest rates of mass loss are expected is also approximately determined and found to be roughly consistent with observation. Finally, the problem of the supersonic flow to large distances from the star is briefly discussed.},
-  annotation = {ADS Bibcode: 1970ApJ...159..879L},
-  file = {/Users/py13je/Zotero/storage/PELUBA4C/Lucy and Solomon - 1970 - Mass Loss by Hot Stars.pdf}
+  doi = {10.1086/160166},
+  abstract = {Numerical values of the radiation pressure on spectral lines are presented for the envelopes of stars having spectral type O-G and any luminosity, metallicity, or velocity structure. The line acceleration is calculated using a tabulation of atomic lines that is complete for the elements H-Zn. The acceleration is found to be remarkably constant over the temperature range 50,000-10,000 K but to drop off sharply for cooler stars. The anomalous ionization observed in OB stars decreases the acceleration by a factor of as much as 2 from radiative equilibrium values. More than half of the acceleration comes from lines whose frequencies overlap with those of neighboring lines at some point in the wind. Line blanketing of the continuum flux by the wind becomes significant for mass loss rates above 10 to the -6th solar mass/yr. The predicted and observed mass loss rates are in complete agreement for the OB stars, and it is concluded that radiation pressure is the dominant mechanism driving the winds from these stars.},
+  keywords = {Astrophysics,B Stars,Early Stars,Line Spectra,O Stars,Radiation Pressure,Stellar Envelopes,Stellar Mass Ejection,Stellar Spectra,Stellar Temperature,Stellar Winds,Supergiant Stars,Wolf-Rayet Stars},
+  annotation = {ADS Bibcode: 1982ApJ...259..282A},
+  file = {/Users/py13je/Zotero/storage/FAYFM4IP/Abbott - 1982 - The theory of radiatively driven stellar winds. II.pdf}
 }
 
 @misc{1987A171L1L,
@@ -868,6 +869,22 @@
   volume = {47},
   pages = {271--306},
   file = {/Users/py13je/Zotero/storage/CVA9YVF3/10029009112.html}
+}
+
+@article{gottliebHighOrderStrong2009,
+  title = {High {{Order Strong Stability Preserving Time Discretizations}}},
+  author = {Gottlieb, Sigal and Ketcheson, David I. and Shu, Chi-Wang},
+  year = {2009},
+  month = mar,
+  journal = {Journal of Scientific Computing},
+  volume = {38},
+  number = {3},
+  pages = {251--289},
+  issn = {0885-7474, 1573-7691},
+  doi = {10.1007/s10915-008-9239-z},
+  abstract = {Strong stability preserving (SSP) high order time discretizations were developed to ensure nonlinear stability properties necessary in the numerical solution of hyperbolic partial differential equations with discontinuous solutions. SSP methods preserve the strong stability properties\textemdash in any norm, seminorm or convex functional\textemdash of the spatial discretization coupled with first order Euler time stepping. This paper describes the development of SSP methods and the connections between the timestep restrictions for strong stability preservation and contractivity. Numerical examples demonstrate that common linearly stable but not strong stability preserving time discretizations may lead to violation of important boundedness properties, whereas SSP methods guarantee the desired properties provided only that these properties are satisfied with forward Euler timestepping. We review optimal explicit and implicit SSP Runge\textendash Kutta and multistep methods, for linear and nonlinear problems. We also discuss the SSP properties of spectral deferred correction methods.},
+  language = {en},
+  file = {/Users/py13je/Zotero/storage/FSJNB5ZF/Gottlieb et al. - 2009 - High Order Strong Stability Preserving Time Discre.pdf}
 }
 
 @article{grafener_optically_2017,
@@ -1929,6 +1946,20 @@
   file = {/Users/py13je/Zotero/storage/T9V37DYW/Paterson - 1983 - A First Course in Fluid Dynamics.pdf}
 }
 
+@article{pauldrachRadiationdrivenWindsHot1986,
+  title = {Radiation-Driven Winds of Hot Luminous Stars. {{Improvements}} of the Theory and First Results.},
+  author = {Pauldrach, A. and Puls, J. and Kudritzki, R. P.},
+  year = {1986},
+  month = aug,
+  journal = {Astronomy and Astrophysics, Vol. 164, p. 86-100 (1986)},
+  volume = {164},
+  pages = {86},
+  issn = {0004-6361},
+  abstract = {The dynamics of radiation-driven winds in hot-luminous-star atmospheres is investigated theoretically on the basis of model computations. The model of Castor et al. (1975) is modified by dropping the radial-streaming approximation for the driving photons and applying the force multipliers of Abbot (1982), and the validity of the model formulation is tested comparing its predictions with those obtained by solving the hydrodynamics and the correct radiative transfer in the comoving frame simultaneously for a sample of weak, intermediate, and strong lines at different continuum wavelengths. Numerical results, including estimates of mass-loss rate and terminal velocity for a sample of OB stars, are presented in tables and graphs and evaluated in detail.},
+  language = {en},
+  file = {/Users/py13je/Zotero/storage/632RQI96/Pauldrach et al. - 1986 - Radiation-driven winds of hot luminous stars. Impr.pdf;/Users/py13je/Zotero/storage/MPCXTV7F/abstract.html}
+}
+
 @article{pittard_3d_2009,
   title = {{{3D}} Models of Radiatively Driven Colliding Winds in Massive {{O}}+{{O}} Star Binaries - {{I}}. {{Hydrodynamics}}},
   author = {Pittard, J. M.},
@@ -2752,6 +2783,26 @@
   year = {2013},
   publisher = {{Springer Science \& Business Media}},
   file = {/Users/py13je/Zotero/storage/PGCQW5JF/Toro - 2013 - Riemann solvers and numerical methods for fluid dy.pdf}
+}
+
+@article{townsendExactIntegrationScheme2009,
+  title = {An {{Exact Integration Scheme}} for {{Radiative Cooling}} in {{Hydrodynamical Simulations}}},
+  author = {Townsend, R. H. D.},
+  year = {2009},
+  month = apr,
+  journal = {The Astrophysical Journal Supplement Series},
+  volume = {181},
+  number = {2},
+  eprint = {0901.3146},
+  eprinttype = {arxiv},
+  pages = {391--397},
+  issn = {0067-0049, 1538-4365},
+  doi = {10.1088/0067-0049/181/2/391},
+  abstract = {A new scheme for incorporating radiative cooling in hydrodynamical codes is presented, centered around exact integration of the governing semi-discrete cooling equation. Using benchmark calculations based on the cooling downstream of a radiative shock, I demonstrate that the new scheme outperforms traditional explicit and implicit approaches in terms of accuracy, while remaining competitive in terms of execution speed.},
+  archiveprefix = {arXiv},
+  language = {en},
+  keywords = {Astrophysics - Instrumentation and Methods for Astrophysics,Astrophysics - Solar and Stellar Astrophysics},
+  file = {/Users/py13je/Zotero/storage/QCFRJU2A/Townsend - 2009 - An Exact Integration Scheme for Radiative Cooling .pdf}
 }
 
 @book{tritton_physical_2012,
