Begun cleaning up chapter 4 in preparation for assessment of work as well as writing results for chapter 4/paper 1

--- a/References/library-biblatex.bib
+++ b/References/library-biblatex.bib
@@ -48,7 +48,7 @@
 }
 
 @article{2010ApJ...724L..90M,
-  title = {Population {{I Wolf}}-{{Rayet Runaway Stars}}: {{The Case}} of {{WR124}} and Its {{Expanding Nebula M1}}-67},
+  title = {Population {{I Wolf}}-{{Rayet Runaway Stars}}: The {{Case}} of {{WR124}} and Its {{Expanding Nebula M1}}-67},
   shorttitle = {Population {{I Wolf}}-{{Rayet Runaway Stars}}},
   author = {Marchenko, S. V. and Moffat, A. F. J. and Crowther, P. A.},
   date = {2010-11-01},
@@ -393,7 +393,7 @@
 }
 
 @article{cherepashchukEvolutionWolfRayetStars2003,
-  title = {Evolution of {{Wolf}}-{{Rayet}} Stars in Binary Systems: {{An}} Analysis of the Mass and Orbital-Eccentricity Distributions},
+  title = {Evolution of {{Wolf}}-{{Rayet}} Stars in Binary Systems: An Analysis of the Mass and Orbital-Eccentricity Distributions},
   shorttitle = {Evolution of {{Wolf}}-{{Rayet}} Stars in Binary Systems},
   author = {Cherepashchuk, A. M. and Karetnikov, V. G.},
   date = {2003-01-01},
@@ -576,7 +576,7 @@
 }
 
 @book{delooreWolfRayetStarsObservations1982,
-  title = {Wolf-{{Rayet Stars}}: {{Observations}}, {{Physics}}, {{Evolution}}},
+  title = {Wolf-{{Rayet Stars}}: Observations, {{Physics}}, {{Evolution}}},
   shorttitle = {Wolf-{{Rayet Stars}}},
   editor = {De Loore, C. W. H. and Willis, A. J.},
   date = {1982},
@@ -1115,7 +1115,7 @@
 }
 
 @book{hartquist_blowing_2004,
-  title = {Blowing {{Bubbles}} in the {{Cosmos}}: {{Astronomical Winds}}, {{Jets}}, and {{Explosions}}},
+  title = {Blowing {{Bubbles}} in the {{Cosmos}}: Astronomical {{Winds}}, {{Jets}}, and {{Explosions}}},
   shorttitle = {Blowing {{Bubbles}} in the {{Cosmos}}},
   author = {Hartquist, T. W. and Dyson, John Edward and Dyson, Professor of Astronomy {and} Head of the Department of Physics {and} Astronomy J. E. and Ruffle, D. P. and Ruffle, Postdoctoral Fellow School of Christianity D. P.},
   date = {2004},
@@ -1236,7 +1236,7 @@
 }
 
 @article{hofner_wind_2015,
-  title = {Wind {{Acceleration}} in {{AGB Stars}}: {{Solid Ground}} and {{Loose Ends}}},
+  title = {Wind {{Acceleration}} in {{AGB Stars}}: Solid {{Ground}} and {{Loose Ends}}},
   shorttitle = {Wind {{Acceleration}} in {{AGB Stars}}},
   author = {H\"ofner, S.},
   date = {2015-08},
@@ -1280,7 +1280,7 @@
 }
 
 @book{ibenStellarEvolutionPhysics2012,
-  title = {Stellar {{Evolution Physics}}: {{Volume}} 1: {{Physical Processes}} in {{Stellar Interiors}}},
+  title = {Stellar {{Evolution Physics}}: Volume 1: Physical {{Processes}} in {{Stellar Interiors}}},
   shorttitle = {Stellar {{Evolution Physics}}},
   author = {Iben, Icko},
   date = {2012},
@@ -1296,7 +1296,7 @@
 }
 
 @book{ibenStellarEvolutionPhysics2013,
-  title = {Stellar {{Evolution Physics}}, {{Volume}} 2: {{Advanced Evolution}} of {{Single Stars}}},
+  title = {Stellar {{Evolution Physics}}, {{Volume}} 2: Advanced {{Evolution}} of {{Single Stars}}},
   shorttitle = {Stellar {{Evolution Physics}}, {{Volume}} 2},
   author = {Iben, Jr., Icko},
   date = {2013-01-01},
@@ -1380,7 +1380,7 @@
 }
 
 @article{kryukov_magnetohydrodynamics_nodate,
-  title = {Magnetohydrodynamics with {{Chombo}}: {{Tests}} and {{First Results}}},
+  title = {Magnetohydrodynamics with {{Chombo}}: Tests and {{First Results}}},
   author = {Kryukov, Igor A and Borovikov, Sergey N and Pogorelov, Nikolai V and Zank, Gary P},
   pages = {8},
   abstract = {DOE's SciDAC adaptive mesh refinement code Chombo has been modified for solution of compressible MHD flows with the application of high resolution, shock-capturing numerical schemes. The code is verified against several standard 1D and 2D MHD test flows involving multiple discontinuities, such as an Orszag\textendash Tang vortex problem, rotor problems, blast wave interactions with dense clouds, Kelvin\textendash Helmholtz instability, etc., and we show here. The results of several such tests are presented. We also summarize the first results obtained using a multifluid model of the solar wind \textendash{} interstellar medium interaction. It is shown that the heliopause is subject to both Rayleigh\textendash Taylor and Kelvin\textendash Helmholtz instabilities.},
@@ -1408,7 +1408,7 @@
 }
 
 @article{laibe_dusty_2012,
-  title = {Dusty Gas with Smoothed Particle Hydrodynamics - {{I}}. {{Algorithm}} and Test Suite: {{Dusty}} Gas with {{SPH}} - {{I}}.},
+  title = {Dusty Gas with Smoothed Particle Hydrodynamics - {{I}}. {{Algorithm}} and Test Suite: Dusty Gas with {{SPH}} - {{I}}.},
   shorttitle = {Dusty Gas with Smoothed Particle Hydrodynamics - {{I}}. {{Algorithm}} and Test Suite},
   author = {Laibe, Guillaume and Price, Daniel J.},
   date = {2012-03-01},
@@ -1443,7 +1443,7 @@
 }
 
 @article{laibe_dustybox_2011,
-  title = {Dustybox and Dustywave: Two Test Problems for Numerical Simulations of Two-Fluid Astrophysical Dust-Gas Mixtures: {{Analytic}} Solutions for Dust-Gas Problems},
+  title = {Dustybox and Dustywave: Two Test Problems for Numerical Simulations of Two-Fluid Astrophysical Dust-Gas Mixtures: Analytic Solutions for Dust-Gas Problems},
   shorttitle = {Dustybox and Dustywave},
   author = {Laibe, Guillaume and Price, Daniel J.},
   date = {2011-12-11},
@@ -1461,7 +1461,7 @@
 }
 
 @inproceedings{lamberts_colliding_2012,
-  title = {Colliding Wind Binaries and {$\gamma$}-Ray Binaries: {{Relativistic}} Version of the {{RAMSES}} Code},
+  title = {Colliding Wind Binaries and {$\gamma$}-Ray Binaries: Relativistic Version of the {{RAMSES}} Code},
   shorttitle = {Colliding Wind Binaries and {$\gamma$}-Ray Binaries},
   author = {Lamberts, Astrid and Dubus, Guillaume and Fromang, S\'ebastien and Lesur, Geoffroy},
   date = {2012},
@@ -1667,7 +1667,7 @@
 }
 
 @book{maciel_hydrodynamics_2014,
-  title = {Hydrodynamics and {{Stellar Winds}}: {{An Introduction}}},
+  title = {Hydrodynamics and {{Stellar Winds}}: An {{Introduction}}},
   shorttitle = {Hydrodynamics and {{Stellar Winds}}},
   author = {Maciel, Walter J.},
   date = {2014},
@@ -1780,7 +1780,7 @@
 }
 
 @article{medinaAreAllWCd2021,
-  title = {Are All {{WCd}} Stars Binaries? {{An IGRINS}} Search for Companion Stars},
+  title = {Are All {{WCd}} Stars Binaries? An {{IGRINS}} Search for Companion Stars},
   shorttitle = {Are All {{WCd}} Stars Binaries?},
   author = {Medina, E. M. and Richardson, N. and Chen\'e, A.},
   date = {2021-06-01},
@@ -1839,7 +1839,7 @@
 }
 
 @article{monnierKeckAperturemaskingExperiment2007,
-  title = {The {{Keck Aperture}}-Masking {{Experiment}}: {{Near}}-{{Infrared Sizes}} of {{Dusty Wolf}}-{{Rayet Stars}}},
+  title = {The {{Keck Aperture}}-Masking {{Experiment}}: Near-{{Infrared Sizes}} of {{Dusty Wolf}}-{{Rayet Stars}}},
   shorttitle = {The {{Keck Aperture}}-Masking {{Experiment}}},
   author = {Monnier, J. D. and Tuthill, P. G. and Danchi, W. C. and Murphy, N. and Harries, T. J.},
   date = {2007-02-01},
@@ -1857,7 +1857,7 @@
 }
 
 @article{morrisseySputteringSurfacesIon2020,
-  title = {Sputtering of {{Surfaces}} by {{Ion Irradiation}}: {{A Comparison}} of {{Binary Collision Approximation}} and {{Molecular Dynamic Models}} to {{Laboratory Measurements}}},
+  title = {Sputtering of {{Surfaces}} by {{Ion Irradiation}}: A {{Comparison}} of {{Binary Collision Approximation}} and {{Molecular Dynamic Models}} to {{Laboratory Measurements}}},
   shorttitle = {Sputtering of {{Surfaces}} by {{Ion Irradiation}}},
   author = {Morrissey, L. and Tucker, O. J. and Killen, R. M. and Domingue, D. and Nakhla, S. and Savin, D. W.},
   date = {2020-10-01},
@@ -1870,7 +1870,7 @@
 }
 
 @article{morrisseySputteringSurfacesIon2020a,
-  title = {Sputtering of {{Surfaces}} by {{Ion Irradiation}}: {{A Comparison}} of {{Binary Collision Approximation}} and {{Molecular Dynamic Models}} to {{Laboratory Measurements}}},
+  title = {Sputtering of {{Surfaces}} by {{Ion Irradiation}}: A {{Comparison}} of {{Binary Collision Approximation}} and {{Molecular Dynamic Models}} to {{Laboratory Measurements}}},
   shorttitle = {Sputtering of {{Surfaces}} by {{Ion Irradiation}}},
   author = {Morrissey, L. and Tucker, O. J. and Killen, R. M. and Domingue, D. and Nakhla, S. and Savin, D. W.},
   date = {2020-10-26},
@@ -1887,7 +1887,7 @@
 }
 
 @book{morton_numerical_2005,
-  title = {Numerical {{Solution}} of {{Partial Differential Equations}}: {{An Introduction}}},
+  title = {Numerical {{Solution}} of {{Partial Differential Equations}}: An {{Introduction}}},
   shorttitle = {Numerical {{Solution}} of {{Partial Differential Equations}}},
   author = {Morton, K. W. and Mayers, D. F.},
   date = {2005},
@@ -2043,7 +2043,7 @@
 }
 
 @article{owockiLinedrivenStellarWinds1999,
-  title = {Line-Driven {{Stellar Winds}}: {{The Dynamical Role}} of {{Diffuse Radiation Gradients}} and {{Limitations}} to the {{Sobolev Approach}}},
+  title = {Line-Driven {{Stellar Winds}}: The {{Dynamical Role}} of {{Diffuse Radiation Gradients}} and {{Limitations}} to the {{Sobolev Approach}}},
   shorttitle = {Line-Driven {{Stellar Winds}}},
   author = {Owocki, S. P. and Puls, J.},
   date = {1999-01-01},
@@ -2079,7 +2079,7 @@
 }
 
 @article{parkin_adaptive_2011,
-  title = {Adaptive Image Ray-Tracing for Astrophysical Simulations: {{Adaptive}} Image Ray-Tracing},
+  title = {Adaptive Image Ray-Tracing for Astrophysical Simulations: Adaptive Image Ray-Tracing},
   shorttitle = {Adaptive Image Ray-Tracing for Astrophysical Simulations},
   author = {Parkin, E. R.},
   date = {2011-01-01},
@@ -2246,7 +2246,7 @@
 }
 
 @article{pittardCollidingwindBinarySystems2020,
-  title = {Colliding-Wind Binary Systems: {{Diffusive}} Shock Acceleration and Non-Thermal Emission},
+  title = {Colliding-Wind Binary Systems: Diffusive Shock Acceleration and Non-Thermal Emission},
   shorttitle = {Colliding-Wind Binary Systems},
   author = {Pittard, J. M. and Vila, G. S. and Romero, G. E.},
   date = {2020-06-21},
@@ -2267,7 +2267,7 @@
 }
 
 @article{pittardCollidingwindBinarySystems2020a,
-  title = {Colliding-Wind Binary Systems: {{Diffusive}} Shock Acceleration and Non-Thermal Emission},
+  title = {Colliding-Wind Binary Systems: Diffusive Shock Acceleration and Non-Thermal Emission},
   shorttitle = {Colliding-Wind Binary Systems},
   author = {Pittard, J. M. and Vila, G. S. and Romero, G. E.},
   date = {2020-04-23},
@@ -2337,7 +2337,7 @@
 }
 
 @book{press_numerical_2007,
-  title = {Numerical {{Recipes}} 3rd {{Edition}}: {{The Art}} of {{Scientific Computing}}},
+  title = {Numerical {{Recipes}} 3rd {{Edition}}: The {{Art}} of {{Scientific Computing}}},
   shorttitle = {Numerical {{Recipes}} 3rd {{Edition}}},
   author = {Press, William H. and Teukolsky, Saul A. and Vetterling, William T. and Flannery, Brian P.},
   date = {2007-09-06},
@@ -2557,7 +2557,7 @@
 }
 
 @article{sanderGalacticWCStars2012,
-  title = {The {{Galactic WC}} Stars: {{Stellar}} Parameters from Spectral Analyses Indicate a New Evolutionary Sequence},
+  title = {The {{Galactic WC}} Stars: Stellar Parameters from Spectral Analyses Indicate a New Evolutionary Sequence},
   shorttitle = {The {{Galactic WC}} Stars},
   author = {Sander, Andreas and Hamann, Wolf-Rainer and Todt, Helge},
   date = {2012-04},
@@ -2661,7 +2661,7 @@
 }
 
 @article{soulainSPHEREViewWolfRayet2018,
-  title = {{{SPHERE}} View of {{Wolf}}-{{Rayet}} 104: {{Direct}} Detection of the {{Pinwheel}} and the Link with the Nearby Star},
+  title = {{{SPHERE}} View of {{Wolf}}-{{Rayet}} 104: Direct Detection of the {{Pinwheel}} and the Link with the Nearby Star},
   shorttitle = {{{SPHERE}} View of {{Wolf}}-{{Rayet}} 104},
   author = {Soulain, A. and Millour, F. and Lopez, B. and Matter, A. and Lagadec, E. and Carbillet, M. and La Camera, A. and Lamberts, A. and Langlois, M. and Milli, J. and Avenhaus, H. and Magnard, Y. and Roux, A. and Moulin, T. and Carle, M. and Sevin, A. and Martinez, P. and Abe, L. and Ramos, J.},
   date = {2018-10},
@@ -2801,7 +2801,7 @@
 }
 
 @article{stoneAthenaAdaptiveMesh2020,
-  title = {The {{Athena}}++ {{Adaptive Mesh Refinement Framework}}: {{Design}} and {{Magnetohydrodynamic Solvers}}},
+  title = {The {{Athena}}++ {{Adaptive Mesh Refinement Framework}}: Design and {{Magnetohydrodynamic Solvers}}},
   shorttitle = {The {{Athena}}++ {{Adaptive Mesh Refinement Framework}}},
   author = {Stone, James M. and Tomida, Kengo and White, Christopher J. and Felker, Kyle G.},
   date = {2020-06-26},
@@ -2840,7 +2840,7 @@
 }
 
 @online{SubmillimeterImagingWolfRayet,
-  title = {Sub-Millimeter {{Imaging}} of {{Wolf}}-{{Rayet Binary Systems}}: {{Investigating Their Role}} in {{Dust Production}} {$\cdot$} {{Vol}}. 53, {{Issue}} 1 ({{AAS237}} Abstracts)},
+  title = {Sub-Millimeter {{Imaging}} of {{Wolf}}-{{Rayet Binary Systems}}: Investigating {{Their Role}} in {{Dust Production}} {$\cdot$} {{Vol}}. 53, {{Issue}} 1 ({{AAS237}} Abstracts)},
   url = {https://baas.aas.org/pub/2021n1i545p01/release/1},
   urldate = {2021-05-24},
   file = {/Users/py13je/Zotero/storage/CLANCUZM/1.html}
@@ -3133,7 +3133,7 @@
 }
 
 @book{vanderhuchtWolfRayetStarsBinaries1995,
-  title = {Wolf-{{Rayet Stars}}: {{Binaries}}, {{Colliding Winds}}, {{Evolution}}: {{Proceedings}} of the 163rd {{Symposium}} of the {{International Astronomical Union}}, {{Held}} in {{La Biodola}}, {{Elba}}, {{Italia}}, {{May}} 2\textendash 6, 1994},
+  title = {Wolf-{{Rayet Stars}}: Binaries, {{Colliding Winds}}, {{Evolution}}: Proceedings of the 163rd {{Symposium}} of the {{International Astronomical Union}}, {{Held}} in {{La Biodola}}, {{Elba}}, {{Italia}}, {{May}} 2\textendash 6, 1994},
   shorttitle = {Wolf-{{Rayet Stars}}},
   editor = {van der Hucht, Karel A. and Williams, Peredur M.},
   options = {useprefix=true},
@@ -3260,7 +3260,7 @@
 }
 
 @book{wendt_computational_2008,
-  title = {Computational {{Fluid Dynamics}}: {{An Introduction}}},
+  title = {Computational {{Fluid Dynamics}}: An {{Introduction}}},
   shorttitle = {Computational {{Fluid Dynamics}}},
   author = {Wendt, John F.},
   date = {2008-10-22},
@@ -3506,7 +3506,7 @@
 }
 
 @article{WolfRayetStarsProceedings2015,
-  title = {Wolf-{{Rayet Stars}} : {{Proceedings}} of an {{International Workshop}} Held in {{Potsdam}}, {{Germany}}, 1.\textendash 5. {{June}} 2015},
+  title = {Wolf-{{Rayet Stars}} : Proceedings of an {{International Workshop}} Held in {{Potsdam}}, {{Germany}}, 1.\textendash 5. {{June}} 2015},
   shorttitle = {Wolf-{{Rayet Stars}}},
   date = {2015},
   publisher = {{Universit\"atsverlag Potsdam}},
@@ -3536,7 +3536,7 @@
 }
 
 @online{zingale_pyro_2013,
-  title = {Pyro: {{A}} Teaching Code for Computational Astrophysical Hydrodynamics},
+  title = {Pyro: A Teaching Code for Computational Astrophysical Hydrodynamics},
   shorttitle = {Pyro},
   author = {Zingale, Michael},
   date = {2013-06-28},
