Big changes to chapter 4 Changes made from advice suggested by Julian from first draft

--- a/Common_Symbols/Common_Symbols.tex
+++ b/Common_Symbols/Common_Symbols.tex
@@ -4,6 +4,10 @@ List of common symbols, if symbol requires a derivation, the appropriate equatio
 
 \begin{longtable}[c]{l|l|l}
   \hline
+  \endhead
+  \hline
+  \endfoot
+
 
   % Include symbols requiring derivation here, try and sort them by alphabet/greek alphabet
   % Perhaps could also be ordered by chapter/function?
@@ -21,8 +25,9 @@ List of common symbols, if symbol requires a derivation, the appropriate equatio
   $v_\infty$ & Wind terminal velocity & \\
   $z$ & Dust-to-gas mass ratio  & \\
 
-  % greek symbols
+  % Greek symbols
 
+  $\beta$ & Electron ion ratio & \\
   $\eta$ & Wind momentum ratio  & \\
   
   $\Lambda(T)$ & Plasma Cooling function & \\
@@ -43,11 +48,6 @@ List of common symbols, if symbol requires a derivation, the appropriate equatio
 
   $\chi$ & Cooling parameter  & Equation \ref{eq:coolingparameter} \\
 
-  
-  % Include units that do not require derivation here
-
-  \hline
-
   % Include Units from here
 
   \hline
@@ -58,7 +58,7 @@ List of common symbols, if symbol requires a derivation, the appropriate equatio
   \si{\au} & Astronomical Unit & \num{1.496e+13} \si{\centi\metre} \\
   \si{\pc} & Parsec & \num{3.086e+18} \si{\centi\metre} \\
   ``warm'' & Warm temperature regime & Between $10^4$ and $10^5$ \si{\kelvin}, personally \\
-  \hline
+
 \end{longtable}
 
 
