--- a/References/library.bib
+++ b/References/library.bib
@@ -177,6 +177,21 @@
   file = {/Users/py13je/Zotero/storage/W2LRNDRK/Bethe - 1939 - Energy Production in Stars.pdf;/Users/py13je/Zotero/storage/IESSBEDW/PhysRev.55.html}
 }
 
+@book{blandyProgrammingRustFast2021,
+  title = {Programming {{Rust}}: Fast, {{Safe Systems Development}}},
+  shorttitle = {Programming {{Rust}}},
+  author = {Blandy, Jim and Orendorff, Jason and Tindall, Leonora},
+  year = {2021},
+  month = jun,
+  edition = {2nd edition},
+  publisher = {{O'Reilly Media, Inc, USA}},
+  address = {{Beijing Boston Farnham Farnham Sebastopol Tokyo}},
+  abstract = {Systems programming provides the foundation for the world's computation. Developing performance-sensitive code requires a programming language that puts programmers in control of how memory, processor time, and other system resources are used. The Rust systems programming language combines that control with a modern type system that catches broad classes of common mistakes, from memory management errors to interthread data races. With this practical guide, experienced systems programmers will learn how to successfully bridge the gap between performance and safety using Rust. Jim Blandy, Jason Orendorff, and Leonora Tindall demonstrate how Rust's features put programmers in control over memory consumption and processor use by combining predictable performance with memory safety and trustworthy concurrency. You'll learn: Rust's fundamental data types and the core concepts of ownership and borrowing Language basics including error handling, crates and modules, structs, and enums How to write flexible, efficient code with traits and generics Rust's key power tools: closures, iterators, and asynchronous programming Collections, strings and text, input and output, concurrency, macros, unsafe code, and interfacing with foreign functions This updated edition covers Rust 1.50 (February 2021).},
+  isbn = {978-1-4920-5259-3},
+  langid = {english},
+  file = {/Users/py13je/Zotero/storage/GCTIC3AA/Blandy et al. - 2021 - Programming Rust Fast, Safe Systems Development.pdf}
+}
+
 @article{bonnell_formation_nodate,
   title = {The {{Formation}} of {{Massive Binary Stars}}},
   author = {Bonnell, Ian A},
@@ -1468,6 +1483,20 @@
   copyright = {2018 Springer Nature Limited},
   langid = {english},
   file = {/Users/py13je/Zotero/storage/QLBQYVW3/Lau - 2019 - Unravelling an enigmatic dusty pinwheel.pdf;/Users/py13je/Zotero/storage/Q8N97C52/s41550-018-0645-3.html}
+}
+
+@book{lauwensThinkJuliaHow2019,
+  title = {Think {{Julia}}: How to {{Think Like}} a {{Computer Scientist}}},
+  shorttitle = {Think {{Julia}}},
+  author = {Lauwens, Ben and Downey, Allen},
+  year = {2019},
+  month = may,
+  publisher = {{O{${'}$}Reilly}},
+  address = {{Beijing ; Sebastopol, CA}},
+  abstract = {If you're just learning how to program, Julia is an excellent JIT-compiled, dynamically typed language with a clean syntax. This hands-on guide uses Julia 1.0 to walk you through programming one step at a time, beginning with basic programming concepts before moving on to more advanced capabilities, such as creating new types and multiple dispatch. Designed from the beginning for high performance, Julia is a general-purpose language ideal for not only numerical analysis and computational science but also web programming and scripting. Through exercises in each chapter, you'll try out programming concepts as you learn them. Think Julia is perfect for students at the high school or college level as well as self-learners and professionals who need to learn programming basics. Start with the basics, including language syntax and semantics Get a clear definition of each programming concept Learn about values, variables, statements, functions, and data structures in a logical progression Discover how to work with files and databases Understand types, methods, and multiple dispatch Use debugging techniques to fix syntax, runtime, and semantic errors Explore interface design and data structures through case studies},
+  isbn = {978-1-4920-4503-8},
+  langid = {english},
+  file = {/Users/py13je/Zotero/storage/QZT4JN2P/Ben Lauwens, Allen B. Downey - Think Julia_ How to Think Like a Computer Scientist (2019, O'Reilly Media) - libgen.li.pdf}
 }
 
 @article{lemaster_effect_2007,
