--- a/Thesis.tex
+++ b/Thesis.tex
@@ -73,7 +73,7 @@
 \usepackage{booktabs}
 %Captions for subfigures
 % \usepackage[format=hang,labelfont=bf]{caption}
-\usepackage[format=hang,labelfont=sl]{caption}
+\usepackage[format=hang,labelfont=bf]{caption}
 
 \usepackage{tikz}
 \usetikzlibrary{shapes.geometric, arrows}
